# GeminiTelegramBot

./: .env  .gitignore  README.md  api.py  config.py  gemini_client.py  main.py  pyproject.toml  screens.py  service.py  settings.py
api/: config.py  gemini_client.py
