[project]
name = "geminitelegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "google-genai>=1.64.0",
    "hammett",
]

[tool.uv.sources]
hammett = { git = "https://github.com/cusdeb-com/hammett.git", rev = "release1" }
