[project]
name = "geminitelegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "gemini-client>=1.0.0",
    "google-genai>=1.64.0",
    "hammett",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
hammett = { git = "https://github.com/cusdeb-com/hammett.git", rev = "release1" }
